2010-10-20  Julien Danjou  <julien@danjou.info>

	* nnimap.el (nnimap-request-article): Fix BODYSTRUCTURE retrieval.

2010-10-20  Andreas Seltenreich  <seltenreich@gmx.de>

	* gnus-draft.el (gnus-draft-check-draft-articles): Don't unnecessarily
	run file-truename on remote files.  This can be expensive and even
	prevent one from editing drafts if some unrelated buffer has a stale
	connection.

2010-10-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-find-fill-point): Shorten line if the preceding char is
	kinsoku-eol regardless of shr-kinsoku-shorten.
	(shr-tag-table-1): Rename from shr-tag-table; make it a subroutine.
	(shr-tag-table): Support caption, thead, and tfoot.

2010-10-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-find-fill-point): Don't leave blanks at the start of some
	lines.
	(shr-save-contents): New command and keystroke.

	* nndoc.el (nndoc-type-alist): Add git support.
	(nndoc-git-type-p): New function.
	(nndoc-transform-git-article): Ditto.
	(nndoc-transform-git-headers): Ditto.
	(nndoc-transform-git-headers): Generate Subject headers.

	* shr.el (shr-parse-style): New function.
	(shr-tag-span): Ditto.

	* nnmairix.el (nnmairix-summary-mode-hook): Move nnmairix's `$' command
	to `G G' to avoid collisions.

2010-10-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el: Load kinsoku if necessary.
	(shr-kinsoku-shorten): New internal variable.
	(shr-find-fill-point): Make kinsoku shorten text line if
	shr-kinsoku-shorten is bound to non-nil.
	(shr-tag-table): Bild shr-kinsoku-shorten to t; refer to
	shr-indentation too when testing if table is wider than frame width.
	(shr-insert-table): Use `string-width' instead of `length' to measure
	text width.
	(shr-insert-table-ruler): Make sure indentation is done at bol.

2010-10-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el (nnimap-request-move-article, nnimap-parse-line)
	(nnimap-process-expiry-targets): Use unibyte for buffers that hold
	undecoded network data.
