@@ -1,6 +1,7 @@
 2010-10-20  Julien Danjou  <julien@danjou.info>
 
 	* nnimap.el (nnimap-request-article): Fix BODYSTRUCTURE retrieval.
+	(nnimap-insert-partial-structure): Fix boundary detection.
 
 2010-10-20  Andreas Seltenreich  <seltenreich@gmx.de>
 
